--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"drizzle-orm": "^0.45.1",
 		"leaflet": "^1.9.4",
 		"marked": "^17.0.1",
+		"nanoid": "^5.1.6",
 		"nodemailer": "^7.0.12",
 		"qrcode.react": "^4.2.0",
 		"react": "^19.2.3",
